k8s/poll-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: poll-ingress
  annotations:
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: poll-service
                port:
                  number: 80
